--- a/app/src/main/res/drawable/button_background.xml
+++ b/app/src/main/res/drawable/button_background.xml
@@ -1,4 +1,12 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF" /> <!-- Цвет фона кнопки (полупрозрачный серый) -->
-    <corners android:radius="50dp" /> <!-- Закругление углов (делает кнопку круглой) -->
-</shape>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <shape android:shape="rectangle">
+            <solid android:color="#80000000" /> <!-- Цвет затемнения при нажатии -->
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#00000000" /> <!-- Прозрачный цвет для нормального состояния -->
+        </shape>
+    </item>
+</selector>
