--- a/app/src/main/res/drawable/rounded_button.xml
+++ b/app/src/main/res/drawable/rounded_button.xml
@@ -1,4 +1,4 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="oval">
-    <solid android:color="#95ECE8E8" /> <!-- Цвет фона кнопки -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#FF4081" /> <!-- Цвет фона кнопки -->
+    <corners android:radius="20dp" /> <!-- Радиус закругления углов кнопки -->
 </shape>
