--- a/app/src/main/res/layout/exercise_start_squats.xml
+++ b/app/src/main/res/layout/exercise_start_squats.xml
@@ -137,7 +137,7 @@
         android:contentDescription="@string/prised"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/prised" />
+        app:srcCompat="@drawable/bell_ring" />
 
     <!-- Кнопка Старт -->
 
