--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,9 @@
 <resources>
     <!-- Base application theme. -->
+
     <style name="Theme.MyDiplom_try2" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/black</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -24,8 +25,7 @@
     <style name="Theme.MyDiplom_try2.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
     <style name="Theme.MyDiplom_try2.Fullscreen" parent="Theme.MyDiplom_try2">
-        <item name="android:actionBarStyle">@style/Widget.Theme.MyDiplom_try2.ActionBar.Fullscreen
-        </item>
+        <item name="android:actionBarStyle">@style/Widget.Theme.MyDiplom_try2.ActionBar.Fullscreen</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowBackground">@null</item>
     </style>
@@ -33,5 +33,21 @@
     <style name="ThemeOverlay.MyDiplom_try2.FullscreenContainer" parent="">
         <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
         <item name="fullscreenTextColor">@color/light_blue_A200</item>
+    </style>
+
+  <!-- Base application theme. -->
+    <style name="Base.MyAppTheme" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">#FF0000</item>
+        <item name="colorPrimaryDark">#990000</item>
+        <item name="colorAccent">#00FF00</item>
+    </style>
+
+    <style name="MyAppTheme" parent="Base.MyAppTheme" />
+    <style name="MyAppTheme.Fullscreen" parent="MyAppTheme">
+        <item name="android:actionBarStyle">@style/Widget.MyAppTheme.ActionBar.Fullscreen</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
     </style>
 </resources>
