--- a/app/src/main/res/layout/fragment_selection_menu.xml
+++ b/app/src/main/res/layout/fragment_selection_menu.xml
@@ -1,176 +1,22 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/exercise_selection_layout"
+<!-- exercise_selection_menu_fragment.xml -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_background"
-    android:fillViewport="true"
-    android:padding="2dp">
+    android:orientation="vertical">
 
-    <LinearLayout
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@color/white"
+        android:elevation="8dp"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />
 
-        <!-- Горизонтальный LinearLayout для кнопки назад и заголовка -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
-
-
-            <!-- Заголовок -->
-            <TextView
-                android:id="@+id/exercise_selection_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:textColor="#F8F8F8"
-                android:text="@string/select_exercise"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="32dp"
-            android:baselineAligned="false">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center"
-                android:layout_weight="1">
-
-                <ImageButton
-                    android:id="@+id/squats_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="230dp"
-                    android:background="#59039BE5"
-                    android:contentDescription="@string/todo"
-                    android:minHeight="0dp"
-                    android:layout_marginEnd="5dp"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/add_in_square"
-                    tools:ignore="DuplicateSpeakableTextCheck" />
-
-                <TextView
-                    android:id="@+id/squats_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/prised"
-                    android:textColor="#D0D0D1" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center"
-                android:layout_weight="1">
-
-                <ImageButton
-                    android:id="@+id/arm_waving_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="230dp"
-                    android:background="#59039BE5"
-                    android:contentDescription="@string/todo"
-                    android:minHeight="0dp"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/add_in_square"
-                    />
-
-                <TextView
-                    android:id="@+id/arm_waving_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/empty_name"
-                    android:textColor="#D0D0D1" />
-            </LinearLayout>
-        </LinearLayout>
-        <!-- Горизонтальный LinearLayout для новых ImageButtons. Копируй и вставляй -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="32dp"
-            android:baselineAligned="false">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center"
-                android:layout_weight="1">
-
-                <!-- Третий ImageButton -->
-                <ImageButton
-                    android:id="@+id/new_button_1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="230dp"
-                    android:background="#59039BE5"
-                    android:contentDescription="@string/todo"
-                    android:minHeight="0dp"
-                    android:layout_marginEnd="5dp"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/add_in_square"
-                    tools:ignore="DuplicateSpeakableTextCheck" />
-
-                <!-- Текст для третьего ImageButton -->
-                <TextView
-                    android:id="@+id/new_button_1_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:textColorHint="#E8D7D7"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/empty_name"
-                    android:textColor="#D0D0D1" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_gravity="center"
-                android:layout_weight="1">
-
-                <!-- четвертый ImageButton -->
-                <ImageButton
-                    android:id="@+id/new_button_2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="230dp"
-                    android:background="#59039BE5"
-                    android:contentDescription="@string/todo"
-                    android:minHeight="0dp"
-                    android:scaleType="centerInside"
-                    android:src="@drawable/add_in_square" />
-
-                <!-- Текст для четвертого ImageButton -->
-                <TextView
-                    android:id="@+id/new_button_2_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="20sp"
-                    android:layout_gravity="center_horizontal"
-                    android:text="@string/empty_name"
-                    android:textColor="#D0D0D1" />
-            </LinearLayout>
-        </LinearLayout>
-        <!-- Вот сюда вставлять -->
-
-
-    </LinearLayout>
-</ScrollView>
+</LinearLayout>
