--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,27 +1,32 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_trainings"
         android:title="@string/workout"
-        android:icon="@drawable/settings" />
+        android:icon="@drawable/settings"
+        app:showAsAction="ifRoom|withText" />
 
     <item
         android:id="@+id/action_statistics"
         android:title="@string/statistics"
-        android:icon="@drawable/statistics" />
+        android:icon="@drawable/statistics"
+        app:showAsAction="ifRoom|withText" />
 
     <item
         android:id="@+id/action_create_training"
         android:title="@string/CreateWorkout"
-        android:icon="@drawable/add_in_square" />
+        android:icon="@drawable/add_in_square"
+        app:showAsAction="ifRoom|withText" />
 
     <item
         android:id="@+id/action_settings"
         android:title="@string/settings"
-        android:icon="@drawable/settings" />
+        android:icon="@drawable/settings"
+        app:showAsAction="ifRoom|withText" />
 
     <item
         android:id="@+id/action_profile"
         android:title="@string/profile"
-        android:icon="@drawable/user" />
-
+        android:icon="@drawable/user"
+        app:showAsAction="ifRoom|withText" />
 </menu>
