--- a/app/src/main/res/layout/fragment_user_records.xml
+++ b/app/src/main/res/layout/fragment_user_records.xml
@@ -1,4 +1,4 @@
-<!-- fragment_existing_workouts.xml -->
+<!-- fragment_user_workouts.xml -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,9 +14,8 @@
         android:padding="16dp" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/userWorkoutsRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
